<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/toolbar_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/toolbar_score"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_vie"
        android:title="@string/toolbar_vie"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_recommencer"
        android:title="@string/toolbar_recommencer" />
    <item
        android:id="@+id/toolbar_niveauDiff"
        android:title="@string/toolbar_niveau" />
</menu>