<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnregistrementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/defaiteTextView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/message_defaite"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="0"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPseudo"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:hint="@string/input_pseudo"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:minLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/perfect_green"
                android:text="@string/btn_register" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnQuitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/perfect_green"
                android:text="@string/btn_quitter" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>